--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1266.0",
+    "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
   },
