--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -7,14 +7,19 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "dotenv": "^16.0.3",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1266.0",
+    "react-native-config": "^1.4.11",
     "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
@@ -26,7 +31,9 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "^0.72.3",
+    "react-devtools": "^4.26.1",
+    "react-native-dotenv": "^3.4.2",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
