--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -8,15 +8,18 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "devtools": "react-devtools"
+    "devtools": "react-devtools",
+    "postinstall": "rndebugger-open"
   },
   "dependencies": {
+    "@react-native-community/cli-debugger-ui": "^9.0.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "axios": "^1.1.3",
+    "axios": "^0.27.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "dotenv": "^16.0.3",
     "react": "18.1.0",
+    "react-devtools-core": "^4.27.1",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1266.0",
     "react-native-config": "^1.4.11",
@@ -32,7 +35,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.3",
-    "react-devtools": "^4.26.1",
+    "react-native-debugger-open": "^0.3.25",
     "react-native-dotenv": "^3.4.2",
     "react-test-renderer": "18.1.0"
   },
