--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1266.0",
     "react-native-config": "^1.4.11",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
