--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -25,6 +25,8 @@
     "react-native-config": "^1.4.11",
     "react-native-document-picker": "^8.1.3",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.10.3",
     "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
