--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-devtools-core": "^4.27.1",
     "react-native": "0.70.5",
