--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -25,6 +25,9 @@
     "react-native-calendars": "^1.1266.0",
     "react-native-config": "^1.4.11",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-emoji-modal": "^0.2.3",
+    "react-native-emoji-picker": "^0.2.2",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
