--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -18,8 +18,8 @@
     "axios": "^0.27.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "dotenv": "^16.0.3",
-    "emoji-mart-native": "^0.6.5-beta",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-devtools-core": "^4.27.1",
@@ -27,8 +27,6 @@
     "react-native-calendars": "^1.1266.0",
     "react-native-config": "^1.4.11",
     "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-emoji-picker": "^0.2.2",
-    "react-native-emoji-selector": "^0.2.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
