changes for calendar commited 04/02/2023

--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -19,10 +19,10 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
-    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-devtools-core": "^4.27.1",
+    "react-google-calendar-api": "^2.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1266.0",
     "react-native-config": "^1.4.11",
