--- a/BuddyTheBall-BackEnd/package.json
+++ b/BuddyTheBall-BackEnd/package.json
@@ -9,10 +9,12 @@
   "author": "BuddyTheBall",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^105.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.7.2",
