--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -28,6 +28,7 @@
     "react-native-config": "^1.4.11",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
