--- a/BuddyTheBall-FrontEnd/package.json
+++ b/BuddyTheBall-FrontEnd/package.json
@@ -27,6 +27,7 @@
     "react-native-calendars": "^1.1266.0",
     "react-native-config": "^1.4.11",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^3.6.0",
